--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -5,3 +5,10 @@ services:
         commands:
             init: ln -snf "${TUGBOAT_ROOT}" "${DOCROOT}"
             build: cat .tugboat/tugboat.txt
+    mysql:
+        image: tugboatqa/mysql
+        commands:
+        init:
+            - scp example.com/database.sql.gz /tmp/
+            - zcat /tmp/database.sql.gz | mysql tugboat
+            - rm /tmp/database.sql.gz
