--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -1,6 +1,6 @@
 services:
   apache:
-    image: tugboatqa/httpd
+    image: tugboatqa/badimage
     aliases: test
     http: true
     https: false
