--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -18,6 +18,7 @@ services:
         - cat .tugboat/tugboat.txt | mail -s "[1] Tugboat Preview ${TUGBOAT_PREVIEW_ID}" tugboat@example.com
         - cat .tugboat/tugboat.txt | mail -s "[2] Tugboat Preview ${TUGBOAT_PREVIEW_ID}" tugboat@example.com
         - cat .tugboat/tugboat.txt
-      online:
-        - set -o pipefail; false | true; echo $?
-        - false | true; echo $?
+      online: -|
+        set -o pipefail
+        false | true
+        echo $?
